test/funcional/beaches.test.ts
import { BeachModel } from '@src/models/beach';
import { UserModel } from '@src/models/user';
import AuthService from '@src/services/auth';

describe('Beaches function tests', () => {
  const defaultUser = {
    name: 'John doe',
    email: 'john@mail.com',
    password: '1234',
  };
  let token: string;

  beforeEach(async () => {
    await BeachModel.deleteMany({});
    await UserModel.deleteMany({});
    const user = await new UserModel(defaultUser).save();
    token = AuthService.generateToken(user.id);
  });

  describe('When creating a beach', () => {
    it('should create a beach with success', async () => {
      const newBeach = {
        lat: -33.792726,
        lng: 151.289824,
        name: 'Manly',
        position: 'E',
      };
      const response = await global.testRequest
        .post('/beaches')
        .set({ 'x-access-token': token })
        .send(newBeach);
      expect(response.status).toBe(201);
      expect(response.body).toEqual(expect.objectContaining(newBeach));
    });

    it('should throw return validation error', async () => {
      const newBeachInvalidLat = {
        lat: 'invalid_string',
        lng: 151.289824,
        name: 'Manly',
        position: 'E',
      };
      const response = await global.testRequest
        .post('/beaches')
        .set({ 'x-access-token': token })
        .send(newBeachInvalidLat);

      expect(response.status).toBe(400);

      expect(response.body).toEqual({
        // code: 400,
        // error: 'Bad Request',
        // message: 'request/body/lat must be number',
      });
    });

    it.skip('should return 500 when there is any erro other than validation error', async () => {
      // TODO
    });
  });
});
